<resources>
    <string name="app_name">mvvm</string>
    <string name="networkUnavailable">网络不可用</string>
    <string name="userNotLoggedIn">用户未登录</string>
    <string name="unknownMistake">未知错误</string>
    <string name="javaTestPage">JAVA测试页面</string>
    <string name="kotlinTestPage">Kotlin测试页面</string>
    <string name="rxBusTest">RxBus测试</string>
    <string name="networkRequestTest">网络请求测试</string>
    <string name="kotlinExample">kotlin示例</string>
    <string name="crossbar">-</string>
    <string name="coroutineTesting">协程测试</string>
    <string name="sudoku">数独</string>
    <string name="reset">重置</string>
    <string name="play">生成</string>
    <string name="banner">banner</string>
    <string name="card">card</string>
    <string name="cardList">cardList</string>
    <string name="MTList">MTList</string>
    <string name="systemTime">系统时间</string>
    <string name="customTime">自定义时间</string>
    <string name="meeting">会议</string>
    <string name="attendance">考勤</string>
    <string name="submit">提交</string>
    <string name="success">成功</string>
    <string name="failure">失败</string>
    <string name="list">列表</string>
    <string name="login">登录</string>
    <string name="userName">用户名</string>
    <string name="password">密码</string>
    <string name="jobNumber">工号</string>
    <string name="startTime">开始时间</string>
    <string name="endTime">结束时间</string>
    <string name="search">搜索</string>
</resources>
