<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="itemClick"
            type="android.view.View.OnClickListener" />

        <variable
            name="meetListViewModel"
            type="com.xwl.mvvm.business.meetlist.MeetListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="38dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/line_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="38dp" />

        <com.scwang.smart.refresh.layout.SmartRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_top"
            app:srlEnableAutoLoadMore="false">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.scwang.smart.refresh.layout.SmartRefreshLayout>

        <View
            android:id="@+id/moreBack"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:alpha="0"
            android:background="@color/translucent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_top" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/groupSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@id/line_more">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/userName"
                app:layout_constraintEnd_toStartOf="@id/etUserName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etUserName"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@={meetListViewModel.request.personnelName}"
                app:layout_constraintBaseline_toBaselineOf="@id/tvUserName"
                app:layout_constraintEnd_toStartOf="@id/tvUserNo"
                app:layout_constraintStart_toEndOf="@id/tvUserName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jobNumber"
                app:layout_constraintBaseline_toBaselineOf="@id/tvUserName"
                app:layout_constraintEnd_toStartOf="@id/etUserNo"
                app:layout_constraintStart_toEndOf="@id/etUserName"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etUserNo"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@={meetListViewModel.request.personnelNo}"
                app:layout_constraintBaseline_toBaselineOf="@id/tvUserName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvUserNo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/startTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/startTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvUserName" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/startTimeValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:onClick="@{(view)->itemClick.onClick(view)}"
                android:text="@{meetListViewModel.request.startTime}"
                app:layout_constraintBaseline_toBaselineOf="@id/startTime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/startTime" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/endTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/endTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/startTime" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/endTimeValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:onClick="@{(view)->itemClick.onClick(view)}"
                android:text="@{meetListViewModel.request.endTime}"
                app:layout_constraintBaseline_toBaselineOf="@id/endTime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/endTime" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btSearch"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:onClick="@{(view)->itemClick.onClick(view)}"
                android:text="@string/search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/endTime" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/titleGroup"
            layout="@layout/title_activity"
            bind:commonTileClick="@{meetListViewModel.commonTileClick}"
            bind:commonTitle="@{meetListViewModel.activityTitle}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
